# cute-shm

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: tests.yml
cute_shm/: __init__.py  core.py  evaluation.py  hdf5_shm.py  main.py  numpy_shm.py  progress.py
cute_shm/.github/workflows/: python-app.yml
demos/: README.md  demo_clean.py  demo_client.py  demo_hdf5.py  demo_numpy.py  demo_read.py  demo_server.py  demo_transfer.py  generate_demo_hdf5_file.py
tests/: test_cute_shm.py
